--- a/ecommerce/Views/Shared/_Layout.cshtml
+++ b/ecommerce/Views/Shared/_Layout.cshtml
@@ -128,7 +128,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Product" asp-action="Index">Sản phẩm</a>
                         </li>
-                        @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Company))
+                        @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Category" asp-action="Index">Danh mục</a>
