--- a/ecommerce/Views/Home/Index.cshtml
+++ b/ecommerce/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model List<ecommerce.Models.Product>
 @{
+    Layout = ViewData["Layout"] as string ?? "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Home Page";
 }
 
