--- a/ecommerce/Views/User/Index.cshtml
+++ b/ecommerce/Views/User/Index.cshtml
@@ -1,5 +1,6 @@
 @model IEnumerable<ecommerce.Models.UserRoleViewModel>
 @{
+    Layout = ViewData["Layout"] as string ?? "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Quản lý người dùng";
 }
 
