--- a/ecommerce/Views/Account/Manage.cshtml
+++ b/ecommerce/Views/Account/Manage.cshtml
@@ -1,5 +1,6 @@
 @model ecommerce.Models.ManageViewModel
 @{
+    Layout = ViewData["Layout"] as string ?? "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Quản lý tài khoản";
 }
 
