--- a/ecommerce/Views/Category/Index.cshtml
+++ b/ecommerce/Views/Category/Index.cshtml
@@ -1,5 +1,6 @@
 @model List<ecommerce.Models.Category>
 @{
+    Layout = ViewData["Layout"] as string ?? "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Category List";
 }
 
