--- a/ecommerce/Views/Product/Edit.cshtml
+++ b/ecommerce/Views/Product/Edit.cshtml
@@ -1,5 +1,6 @@
 @model ecommerce.Models.Product
 @{
+    Layout = ViewData["Layout"] as string ?? "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Sửa sản phẩm";
 }
 
