--- a/ecommerce/Views/Product/Index.cshtml
+++ b/ecommerce/Views/Product/Index.cshtml
@@ -1,6 +1,7 @@
 @using ecommerce.Models
 @model List<ecommerce.Models.Product>
 @{
+    Layout = ViewData["Layout"] as string ?? "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Product List";
 }
 
