--- a/ecommerce/Views/User/Create.cshtml
+++ b/ecommerce/Views/User/Create.cshtml
@@ -1,5 +1,6 @@
 @model ecommerce.Models.RegisterViewModel
 @{
+    Layout = ViewData["Layout"] as string ?? "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Thêm người dùng";
 }
 
