--- a/ecommerce/Views/User/Delete.cshtml
+++ b/ecommerce/Views/User/Delete.cshtml
@@ -1,5 +1,6 @@
 @model ecommerce.Models.UserRoleViewModel
 @{
+    Layout = ViewData["Layout"] as string ?? "~/Views/Shared/_Layout.cshtml";
     ViewData["Title"] = "Xóa người dùng";
 }
 
